-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u181, 9
-
Component/s: hotspot
-
b107
-
x86
-
windows
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206472 | 8u202 | David Buck | P2 | Closed | Fixed | b01 |
| JDK-8220865 | emb-8u211 | David Buck | P2 | Resolved | Fixed | master |
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (malloc) failed to allocate 4096 bytes for AllocateHeap
# Possible reasons:
# The system is out of physical RAM or swap space
# In 32 bit mode, the process size limit was hit
# Possible solutions:
# Reduce memory load on the system
# Increase physical memory or swap space
# Check if swap backing store is full
# Use 64 bit Java on a 64 bit OS
# Decrease Java heap size (-Xmx/-Xms)
# Decrease number of Java threads
# Decrease Java thread stack sizes (-Xss)
# Set larger code cache with -XX:ReservedCodeCacheSize=
# This output file may be truncated or incomplete.
#
# Out of Memory Error (C:\jprt\T\P1\220705.amurillo\s\hotspot\src\share\vm\memory/allocation.inline.hpp:61), pid=312156, tid=106012
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151030220705.amurillo.jdk9-hs-2015-10--b00)
# Java VM: Java HotSpot(TM) Server VM (1.9.0-internal-20151030220705.amurillo.jdk9-hs-2015-10--b00, compiled mode, tiered, g1 gc, windows-x86)
# Core dump will be written. Default location: C:\Users\aurora\sandbox\results\workDir\jdk\lambda\vm\InterfaceAccessFlagsTest\hs_err_pid312156.mdmp
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (malloc) failed to allocate 4096 bytes for AllocateHeap
# Possible reasons:
# The system is out of physical RAM or swap space
# In 32 bit mode, the process size limit was hit
# Possible solutions:
# Reduce memory load on the system
# Increase physical memory or swap space
# Check if swap backing store is full
# Use 64 bit Java on a 64 bit OS
# Decrease Java heap size (-Xmx/-Xms)
# Decrease number of Java threads
# Decrease Java thread stack sizes (-Xss)
# Set larger code cache with -XX:ReservedCodeCacheSize=
# This output file may be truncated or incomplete.
#
# Out of Memory Error (C:\jprt\T\P1\220705.amurillo\s\hotspot\src\share\vm\memory/allocation.inline.hpp:61), pid=312156, tid=106012
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151030220705.amurillo.jdk9-hs-2015-10--b00)
# Java VM: Java HotSpot(TM) Server VM (1.9.0-internal-20151030220705.amurillo.jdk9-hs-2015-10--b00, compiled mode, tiered, g1 gc, windows-x86)
# Core dump will be written. Default location: C:\Users\aurora\sandbox\results\workDir\jdk\lambda\vm\InterfaceAccessFlagsTest\hs_err_pid312156.mdmp
#
- backported by
-
JDK-8220865 Various test fail with OOME on win x86
-
- Resolved
-
-
JDK-8206472 Various test fail with OOME on win x86
-
- Closed
-
- relates to
-
JDK-8139695 mb/api/javax/xml/DOM/testBuildMir237 failed with Out of Memory Error
-
- Closed
-
-
JDK-8144824 Crash: OOM on Solaris 11, 256G
-
- Closed
-