8141421: Various test fail with OOME on win x86

Fix memory overuse in g1CodeCacheRemset

Reviewed-by: tschatzl, mgerdin